log
Fri 25 Aug 2023 10:15:05 PM UTC: 
 tests:  0|6
total_score: 0/70
2eb1dbf
Fri 25 Aug 2023 10:20:43 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0f3c6c7
Fri 25 Aug 2023 10:26:32 PM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
list.c: In function ‘nextList’:
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bd2a0a4
Fri 25 Aug 2023 10:29:34 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9763049
Fri 25 Aug 2023 10:29:43 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
029fca8
Fri 25 Aug 2023 10:30:09 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
list.c: In function ‘nextList’:
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1ec89cd
Fri 25 Aug 2023 10:33:26 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2e0656f
Fri 25 Aug 2023 10:35:42 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
fcedbb6
Fri 25 Aug 2023 10:37:18 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
d5a98a5
